<resources>
    <string name="app_name">My Artistic Room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="title_activity_login">Login</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <!--TODO (Step 4: All the string values are added here.)-->
    <!--START-->
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="welcome_to">Welcome to</string>
    <string name="my_artistic_room">My Artistic Room</string>
    <string name="username1">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="by_joining_you_agree_to_our_terms_of_service">By Joining, you agree to our <u>Terms of Service</u></string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">Or</string>
    <string name="write_message">write message</string>
    <string name="news_feed">News Feed</string>
    <string name="Username">Username</string>
    <string name="todo">TODO</string>
    <string name="upload_image">Upload Image</string>
    <string name="download_image">Download Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="fab_content_desc">fab_content_desc</string>
    <string name="logout">Logout</string>
</resources>