<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/artistic_bg2"
    android:orientation="vertical"
    tools:context=".activities.StartActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeToTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="0dp"
            android:elevation="100dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_to"
            android:textColor="#000"
            android:textSize="48sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/eyeOnTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/my_artistic_room"
            android:textColor="@color/colorPrimaryText"
            android:textSize="48sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sign_in_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:text="@string/or"
            android:textStyle="bold"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up_intro"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:strokeColor="@color/colorSecondary"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/by_joining_you_agree_to_our_terms_of_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

